[gd_scene load_steps=11 format=3 uid="uid://c3oyahd1wpvkq"]

[ext_resource type="Script" path="res://scripts/creature.gd" id="1_xp3k1"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xdaj4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t3fs8"]
albedo_color = Color(0.498039, 0.490196, 0.494118, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_nqped"]
material = SubResource("StandardMaterial3D_t3fs8")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fisb7"]
albedo_color = Color(0.054902, 0.054902, 0.054902, 1)

[sub_resource type="SphereMesh" id="SphereMesh_sqo38"]
material = SubResource("StandardMaterial3D_fisb7")

[sub_resource type="SphereShape3D" id="SphereShape3D_2by1j"]
radius = 5.0

[sub_resource type="Animation" id="Animation_pgach"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.517647, 0.976471, 0.513726, 0.470588)]
}

[sub_resource type="Animation" id="Animation_0f66i"]
resource_name = "spawn_success"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.517647, 0.976471, 0.513726, 0.443137), Color(0.517647, 0.976471, 0.513726, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hib8g"]
_data = {
"RESET": SubResource("Animation_pgach"),
"spawn_success": SubResource("Animation_0f66i")
}

[node name="creature" type="CharacterBody3D"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
script = ExtResource("1_xp3k1")

[node name="torso collide" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_xdaj4")

[node name="torso" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_nqped")

[node name="left leg" type="MeshInstance3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -0.415083, -0.793539, -0.00284511)
mesh = SubResource("CapsuleMesh_nqped")

[node name="right leg" type="MeshInstance3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0.415, -0.794, -0.003)
mesh = SubResource("CapsuleMesh_nqped")

[node name="left arm" type="MeshInstance3D" parent="."]
transform = Transform3D(0.234608, 0.0863655, 0, -0.0863655, 0.234608, 0, 0, 0, 0.25, -0.522763, 0.173, 0.114795)
mesh = SubResource("CapsuleMesh_nqped")

[node name="right arm" type="MeshInstance3D" parent="."]
transform = Transform3D(0.234647, -0.086259, 2.60513e-09, 0.086259, 0.234647, -7.08168e-09, -1.7133e-12, 7.54566e-09, 0.25, 0.523, 0.173, 0.115)
mesh = SubResource("CapsuleMesh_nqped")

[node name="right eye" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.164503, 0.73648, 0.410179)
mesh = SubResource("SphereMesh_sqo38")

[node name="left eye" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.165, 0.736, 0.41)
mesh = SubResource("SphereMesh_sqo38")

[node name="WalkTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="PauseTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="sex zone" type="Area3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="sex zone"]
shape = SubResource("SphereShape3D_2by1j")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.517647, 0.976471, 0.513726, 0.470588)

[node name="spawn_anime" type="AnimationPlayer" parent="CanvasLayer/ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_hib8g")
}

[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_PauseTimer_timeout"]
[connection signal="area_entered" from="sex zone" to="." method="_on_berry_contact"]
[connection signal="body_entered" from="sex zone" to="." method="_on_sex_zone_body_entered"]
